--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,11 @@
   src: url("./fonts/Everett-Jana.otf") format("opentype");
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;500;600;700;800&display=swap");
+
 body {
   margin: 0;
-  font-family: "Everett", -apple-system, BlinkMacSystemFont, "Segoe UI",
+  font-family: "Shippori Mincho", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
